After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 609830 - Alt-F2 error messages do not understand Unicode
Alt-F2 error messages do not understand Unicode
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2010-02-13 13:46 UTC by Nguyen Thai Ngoc Duy
Modified: 2010-02-17 18:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gjs_throw: convert error string from UTF-8 (1.27 KB, patch)
2010-02-13 15:01 UTC, Dan Winship
committed Details | Review

Description Nguyen Thai Ngoc Duy 2010-02-13 13:46:55 UTC
I ran gnome-shell with locale vi_VN.UTF-8. When I pressed Alt-f2 and typed an non-existant command it gave me "raw" Vietnamese message, like the one you see using a hex editor.
Comment 1 Nguyen Thai Ngoc Duy 2010-02-13 14:31:34 UTC
There must be some canonicalization going on. I have translated gnome-shell into Vietnamese. If the English sentence is "Execution of 'foo' failed: blah blah blah" then the translated part "Execution of 'foo' failed:" is translated (and shown) correctly. The actual error message "blah blah blah" is just garbage.
Comment 2 Dan Winship 2010-02-13 15:01:33 UTC
Created attachment 153709 [details] [review]
gjs_throw: convert error string from UTF-8
Comment 3 Nguyen Thai Ngoc Duy 2010-02-13 15:15:03 UTC
(In reply to comment #2)
> Created an attachment (id=153709) [details] [review]
> gjs_throw: convert error string from UTF-8

That fixes it for me.
Comment 4 Colin Walters 2010-02-13 17:17:35 UTC
Review of attachment 153709 [details] [review]:

LGTM
Comment 5 Dan Winship 2010-02-17 18:46:19 UTC
Attachment 153709 [details] pushed as a645a2b - gjs_throw: convert error string from UTF-8