gjs_throw: convert error string from UTF-8

https://bugzilla.gnome.org/show_bug.cgi?id=609830